2008-09-18  Johan Euphrosine <proppy@aminche.com>
	
 	* Release 1.7.0

	* pokernetwork/pokerpackets.py, pokernetwork/pokertable.py,
	  tests/test-pokerpackets.py.in, tests/test-pokertable.py.in: add
	  tourney_serial ('no net') member to PacketPokerTable

2008-09-18  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerservice.py: all delays must be converted to int
	  (when read from the XML file they are strings)
	* Makefile.am: Add AGPLv3 LICENSE GPLv3 to EXTRA_DIST

2008-09-18  Johan Euphrosine <proppy@aminche.com>

	* pokernetwork/pokertable.py, tests/test-pokertable.py.in: call
	  service.updateTableStats in pokertable.seatPlayer and
	  pokertable.leavePlayer

2008-09-17  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerpackets.py: add missing
	  PacketFactory[PACKET_POKER_PLAYER_STATS] = PacketPokerPlayerStats

2008-09-17  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerpackets.py.in
	(PokerPacketsTestCase.test_verifyfactory): Added test to verify
	the PokerFactory and PacketNames variables have proper contents.

2008-09-16  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test15_handPlay): Added test for
	UserStatsLookup packet sent on join.
	(PokerAvatarTestCase.joinTable): Added test for UserStatsLookup.

	* tests/test-pokerservice.py.in
	(PokerServiceTestCase.configValues): Added check that service is
	properly set.

	* pokernetwork/pokerservice.py (PokerService.__init__):
	UserStatsFactory() output must be initalized in with the service.

	* tests/test-userstats.py.in
	(PokerUserStatsTestCase.test03_rankPercentileAccessor): updated
	test to check for currency_serial being 0.

	* pokernetwork/userstats.py
	(UserStatsRankPercentileAccessor._lookupValidStat): currency can
	be zero.

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.seatTable):
	Added test for stat packet.
	(PokerAvatarTestCase.createRankDBTable): Wrote method.
	(PokerAvatarTestCase.test09_01_seatTableWithRankTable): Wrote
	test.